--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>com.github.alexgitstudy</groupId>
     <artifactId>spring_core</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.8.RELEASE</version>
+        </dependency>
+
+
+
+
+
+    </dependencies>
 
 </project>
