--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,15 @@
             <version>4.3.8.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.5</version>
+        </dependency>
+
+
+
 
 
 
